--- a/react/package.json
+++ b/react/package.json
@@ -1,5 +1,8 @@
 {
   "spm": {
+    "output": [
+      "index.html", "index.css", "index.js"
+    ],
     "dependencies": {
       "react-router": "0.11.6",
       "react": "0.12.2"
