--- a/react/package.json
+++ b/react/package.json
@@ -1,13 +1,16 @@
 {
   "spm": {
     "output": [
-      "index.html", "index.css", "index.js"
+      "index.html", "index.js"
     ],
     "dependencies": {
       "react-router": "0.11.6",
       "react": "0.12.2"
     },
-    "6to5": {},
-    "buildArgs": "--standalone"
+    "extractCSS": true,
+    "babel": {
+      "blacklist": ["react"]
+    },
+    "buildArgs": "--standalone --global react:React"
   }
 }
