--- a/react/package.json
+++ b/react/package.json
@@ -4,13 +4,9 @@
       "index.html", "index.js"
     ],
     "dependencies": {
-      "react-router": "0.11.6",
-      "react": "0.12.2"
+      "react-router": "0.13.1",
+      "react": "0.13.1"
     },
-    "extractCSS": true,
-    "babel": {
-      "blacklist": ["react"]
-    },
-    "buildArgs": "--standalone --global react:React"
+    "extractCSS": true
   }
 }
