--- a/react/package.json
+++ b/react/package.json
@@ -1,12 +1,15 @@
 {
   "spm": {
     "output": [
-      "index.html", "index.js"
+      "index.html",
+      "index.js"
     ],
     "dependencies": {
       "react-router": "0.13.1",
       "react": "0.13.1"
     },
-    "extractCSS": true
+    "build": {
+      "extractCSS": true
+    }
   }
 }
