--- a/common-file/package.json
+++ b/common-file/package.json
@@ -7,7 +7,8 @@
     "dependencies": {
       "jquery": "1.11.2"
     },
-    "buildArgs": "--standalone",
-    "common": true
+    "build": {
+      "common": true
+    }
   }
 }
