--- a/todo/package.json
+++ b/todo/package.json
@@ -5,12 +5,13 @@
       "index.js",
       "index.html"
     ],
-    "extractCSS": true,
+    "build": {
+      "extractCSS": true
+    },
     "dependencies": {
       "jquery": "1.10.1",
       "underscore": "1.6.0",
       "backbone": "1.1.2"
-    },
-    "buildArgs": "--include standalone"
+    }
   }
 }
