let es6 support ie8

--- a/es6/package.json
+++ b/es6/package.json
@@ -2,10 +2,14 @@
   "spm": {
     "output": [
       "index.html",
+      "es5-shim-sham.js",
       "index.js"
     ],
     "build": {
-      "babel": true
+      "babel": {}
+    },
+    "dependencies": {
+      "es5-shim": "~4.0.5"
     }
   }
 }
