add css for custom-loader

--- a/custom-loader/package.json
+++ b/custom-loader/package.json
@@ -5,8 +5,11 @@
     ],
     "build": {
       "loader": {
-        ".js": "+./loader"
-      }
+        ".js": "+./loader",
+        ".css": "+./loader"
+      },
+      "extractCSS": true,
+      "autoprefixer": true
     }
   }
 }
