fix react example

--- a/react/package.json
+++ b/react/package.json
@@ -9,7 +9,10 @@
       "react": "0.13.1"
     },
     "build": {
-      "extractCSS": true
+      "extractCSS": true,
+      "global": {
+        "react": "React"
+      }
     }
   }
 }
